--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
+crc-any = "2.3.9"
+
 futures-channel = { version = "0.3.13"}
 
 # TODO !corbett Latest is 0.2.69
