--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ wee_alloc = { version = "0.4.5", optional = true }
 
 base64 = "0.13.0"
 
-web-sys = { version = "0.3.49", features = ["Headers", "RequestInit", "RequestMode", "Request", "Response", "Window"] }
+web-sys = { version = "0.3.49", features = ["console", "Headers", "RequestInit", "RequestMode", "Request", "Response", "Window"] }
 
 [dev-dependencies]
 wasm-bindgen-test = { version = "0.3.13" }
@@ -51,6 +51,7 @@ wasm-bindgen-test = { version = "0.3.13" }
 [profile.release]
 # Tell `rustc` to optimize for small code size.
 opt-level = "s"
+debug = true
 
 # https://github.com/rustwasm/wasm-bindgen/issues/2279
 [package.metadata.wasm-pack.profile.release]
