Use container build with github actions

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,17 +1,29 @@
+variables:
+  FF_USE_FASTZIP: 1
+
+image: rust:buster
+
 stages:
   - build
 
 variables:
-  BRANCH: $CI_COMMIT_BRANCH
-  CONTAINER_IMAGE: tagged-base64
-  DOCKER_REGISTRY: 279906117593.dkr.ecr.us-east-2.amazonaws.com
+  CARGO_HOME: $CI_PROJECT_DIR/.cargo
 
 before_script:
   - docker info
 
-build_main:
+build:
   tags:
-    - shell
+    - docker
   stage: build
   script:
-    - docker build --pull -t $DOCKER_REGISTRY/$CONTAINER_IMAGE:$CI_COMMIT_BRANCH .
+    - apt-get update && apt-get install -y firefox-esr
+    - cargo install wasm-pack
+    - cargo build
+    - cargo test
+    - wasm-pack test --headless --firefox
+  cache:
+    key: build-cache
+    paths:
+      - .cargo/
+      - target/
