--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ default = ["console_error_panic_hook"]
 [dependencies]
 crc-any = "2.4.1"
 
-futures-channel = { version = "0.3.18"}
+futures-channel = { version = "^0.3.0"}
 
 wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
 
