Prepping for opensource

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,8 @@ name: Build
 
 on:
   push:
+    branches:
+      - main
   pull_request:
     branches:
       - main
@@ -11,34 +13,35 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted
-    container:
-      image: registry.gitlab.com/asuran-rs/containers/rust-sccache-docker:1.56
+    runs-on: ubuntu-latest
     steps:
-      - uses: styfle/cancel-workflow-action@0.9.1
-        name: Cancel Outdated Builds
+      - name: Cancel Outdated Builds
+        uses: styfle/cancel-workflow-action@0.9.1
         with:
           all_but_latest: true
           access_token: ${{ github.token }}
 
-      - name: Install firefox-esr
-        run: apt-get update && apt-get install -y firefox-esr && rm -rf /var/lib/apt/lists/*
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-      - uses: actions/checkout@v2
-        name: Checkout Repository
+      - name: Install stable toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: default
+          toolchain: stable
+          override: true
+          default: true
+          components: rustfmt, clippy
 
-      - uses: Swatinem/rust-cache@v1
-        name: Enable Rust Caching
+      - name: Enable Rust Caching
+        uses: Swatinem/rust-cache@v1
 
       - name: Install wasm-pack binary
         run: |
           wget -O wasm.tar.gz https://github.com/rustwasm/wasm-pack/releases/download/v0.10.2/wasm-pack-v0.10.2-x86_64-unknown-linux-musl.tar.gz
           tar -xvf wasm.tar.gz
-          mv wasm*/wasm-pack /usr/bin/
-
-      - name: Disable cargo options
-        # delete cargo config so default linker is used
-        run: rm /opt/.cargo/config
+          sudo mv -v wasm*/wasm-pack /usr/bin/
+          rm -rv wasm.tar.gz wasm-pack-*
 
       - name: Clippy
         uses: actions-rs/clippy-check@v1
@@ -57,5 +60,4 @@ jobs:
         run: cargo test --verbose -- -Zunstable-options --report-time
 
       - name: Web Test
-        # $HOME has to match running user (root)
-        run: HOME=/root wasm-pack test --headless --firefox
+        run: wasm-pack test --headless --firefox
