--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,9 @@ base64 = "0.13.0"
 
 web-sys = { version = "0.3.49", features = ["console", "Headers", "RequestInit", "RequestMode", "Request", "Response", "Window"] }
 
+# Command line argument processing
+structopt = { version = "0.3", features = ["paw"] }
+
 [dev-dependencies]
 getrandom = { version = "0.2", features = ["js"] }
 quickcheck = "1.0"
