--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,9 +20,12 @@ wasm-debug = ["dep:console_error_panic_hook"]
 build-cli = ["dep:clap"]
 
 [dependencies]
-crc-any = { version = "2.4.1", default-features = false }
-
+ark-serialize = { version = "0.3.0", default-features = false, features = ["derive"] }
 base64 = "0.13.0"
+crc-any = { version = "2.4.1", default-features = false }
+serde = { version = "1.0", features = ["derive"] }
+snafu = { version = "0.7", features = ["backtraces"] }
+tagged-base64-macros = { path = "macros" }
 
 # Command line argument processing
 clap = { version = "4.0", optional = true, features = ["derive"] }
@@ -40,9 +43,12 @@ web-sys = { version = "0.3.49", optional = true, features = ["console", "Headers
 console_error_panic_hook = { version = "0.1.7", optional = true }
 
 [dev-dependencies]
+ark-std = { version = "0.3.0", default-features = false }
+bincode = "1.3"
 getrandom = { version = "0.2", features = ["js"] }
 quickcheck = "1.0"
 quickcheck_macros = "1.0"
+serde_json = "1.0"
 wasm-bindgen-test = { version = "0.3.28" }
 
 [profile.release]
