--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,17 +15,19 @@ name = "tagged-base64"
 required-features = ["build-cli"]
 
 [features]
-default = []
+default = ["ark-serialize", "serde"]
+ark-serialize = ["dep:ark-serialize"]
+serde = ["dep:serde", "tagged-base64-macros/serde"]
 wasm-debug = ["dep:console_error_panic_hook"]
 build-cli = ["dep:clap"]
 
 [dependencies]
-ark-serialize = { version = "0.3.0", default-features = false, features = ["derive"] }
+ark-serialize = { version = "0.3.0", optional = true, default-features = false, features = ["derive"] }
 base64 = "0.13.0"
 crc-any = { version = "2.4.1", default-features = false }
-serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1.0", optional = true, features = ["derive"] }
 snafu = { version = "0.7", features = ["backtraces"] }
-tagged-base64-macros = { path = "macros" }
+tagged-base64-macros = { path = "macros", default-features = false }
 
 # Command line argument processing
 clap = { version = "4.0", optional = true, features = ["derive"] }
