--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -8,6 +8,10 @@ edition = "2018"
 [lib]
 proc-macro = true
 
+[features]
+default-features = ["serde"]
+serde = []
+
 [dependencies]
 ark-std = { version = "0.3.0", default-features = false }
 syn = { version = "1.0", features = ["extra-traits"] }
