--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ console_error_panic_hook = { version = "0.1.7", optional = true }
 
 [dev-dependencies]
 bincode = "1.3"
+getrandom = { version = "0.2", features = ["js"] }
 quickcheck = "1.0"
 quickcheck_macros = "1.0"
 serde_json = "1.0"
