--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,10 @@ name = "tagged-base64"
 required-features = ["build-cli"]
 
 [features]
-default = ["ark-serialize", "serde"]
+default = ["ark-serialize", "serde", "wasm-bindgen"]
 ark-serialize = ["dep:ark-serialize"]
 serde = ["dep:serde", "tagged-base64-macros/serde"]
+wasm-bindgen = ["dep:wasm-bindgen"]
 wasm-debug = ["dep:console_error_panic_hook"]
 build-cli = ["dep:clap"]
 
@@ -33,7 +34,7 @@ tagged-base64-macros = { path = "macros", default-features = false }
 clap = { version = "4.0", optional = true, features = ["derive"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
+wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"], optional = true }
 
 # required for debugging from wasm
 web-sys = { version = "0.3.49", optional = true, features = ["console", "Headers", "RequestInit", "RequestMode", "Request", "Response", "Window"] }
