--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -13,5 +13,5 @@ default = ["serde"]
 serde = []
 
 [dependencies]
-syn = { version = "1.0", features = ["extra-traits"] }
+syn = { version = "1.0.109", features = ["full", "extra-traits"] }
 quote = "1.0"
