--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "tagged-base64"
-version = "0.3.1"
+version = "0.3.2"
 authors = ["John D. Corbett <corbett@pictographer.com>"]
 edition = "2021"
 description = "User-oriented format for binary data. Tagged Base64 is intended to be used in user interfaces including URLs and text to be copied and pasted without the need for additional encoding, such as quoting or escape sequences."
 repository = "https://gitlab.com/translucence/common/tagged-base64"
-license-file = "LICENSE"
+license = "MIT"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
@@ -25,11 +25,11 @@ build-cli = ["dep:clap"]
 [dependencies]
 ark-serialize = { version = "0.4.0", optional = true, default-features = false, features = ["derive"] }
 ark-std = { version = "0.4.0", default-features = false }
-base64 = "0.13.0"
+base64 = "0.13.1"
 crc-any = { version = "2.4.1", default-features = false }
 serde = { version = "1.0", optional = true, features = ["derive"] }
 snafu = { version = "0.7", features = ["backtraces"] }
-tagged-base64-macros = { path = "macros", default-features = false }
+tagged-base64-macros = { version = "0.3.2", path = "macros", default-features = false }
 
 # Command line argument processing
 clap = { version = "4.0", optional = true, features = ["derive"] }
