--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "tagged-base64-macros"
 description = "Procedural macros associated with tagged-base64"
-version = "0.3.2"
+version = "0.3.3"
 authors = ["Espresso Systems <hello@espressosys.com>"]
 edition = "2021"
+repository = "https://github.com/EspressoSystems/tagged-base64"
 license = "MIT"
 
 [lib]
