CI: Turn off semver check for now

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,5 +48,8 @@ jobs:
       - name: Web Test
         run: wasm-pack test --headless --firefox
 
-      - name: Check semver
-        uses: obi1kenobi/cargo-semver-checks-action@v2
+      # Temporarily disable semver check
+      #- name: Check semver
+      #  uses: obi1kenobi/cargo-semver-checks-action@v2
+      #  with:
+      #    package: tagged-base64
