--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,14 @@ members = [
 ]
 
 [workspace.dependencies]
+ark-bls12-381 = "0.4"
+ark-serialize = { version = "0.4", default-features = false }
+ark-std = { version = "0.4", default-features = false }
+rand_chacha = "0.3"
+serde = "1.0"
 snafu = "0.8"
+
+[profile.release]
+# Tell `rustc` to optimize for small code size.
+opt-level = "s"
+debug = true
