--- a/tagged-base64/Cargo.toml
+++ b/tagged-base64/Cargo.toml
@@ -22,11 +22,11 @@ wasm-debug = ["dep:console_error_panic_hook"]
 build-cli = ["dep:clap"]
 
 [dependencies]
-ark-serialize = { version = "0.4.0", optional = true, default-features = false, features = ["derive"] }
-ark-std = { version = "0.4.0", default-features = false }
+ark-serialize = { workspace = true, optional = true, features = ["derive"] }
+ark-std = { workspace = true }
 base64 = "0.21"
 crc-any = { version = "2.4.1", default-features = false }
-serde = { version = "1.0", optional = true, features = ["derive"] }
+serde = { workspace = true, optional = true, features = ["derive"] }
 snafu = { workspace = true }
 tagged-base64-macros = { version = "0.4.0", path = "../tagged-base64-macros", default-features = false }
 
@@ -46,17 +46,14 @@ web-sys = { version = "0.3.49", optional = true, features = ["console", "Headers
 console_error_panic_hook = { version = "0.1.7", optional = true }
 
 [dev-dependencies]
+ark-bls12-381 = { workspace = true }
 bincode = "1.3"
 getrandom = { version = "0.2", features = ["js"] }
 quickcheck = "1.0"
 quickcheck_macros = "1.0"
+rand_chacha = "0.3"
 serde_json = "1.0"
 wasm-bindgen-test = { version = "0.3.28" }
-
-[profile.release]
-# Tell `rustc` to optimize for small code size.
-opt-level = "s"
-debug = true
 
 # https://github.com/rustwasm/wasm-bindgen/issues/2279
 [package.metadata.wasm-pack.profile.release]
