--- a/tagged-base64/Cargo.toml
+++ b/tagged-base64/Cargo.toml
@@ -46,7 +46,7 @@ web-sys = { version = "0.3.49", optional = true, features = ["console", "Headers
 console_error_panic_hook = { version = "0.1.7", optional = true }
 
 [dev-dependencies]
-ark-bls12-381 = { workspace = true }
+ark-bls12-381 = "0.5"
 bincode = "1.3"
 getrandom = { version = "0.2", features = ["js"] }
 quickcheck = "1.0"
